# ChangeLog for www-client/opera
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.285 2008/09/19 14:15:35 jer Exp $

*opera-9.60_pre2430 (19 Sep 2008)

  19 Sep 2008; Jeroen Roovers <jer@gentoo.org> +opera-9.60_pre2430.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2008/09/19/another-step>.

*opera-9.60_pre2426 (13 Sep 2008)

  13 Sep 2008; Jeroen Roovers <jer@gentoo.org> +opera-9.60_pre2426.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2008/09/12/a-new-weekly-and-my-first
  -post-here>.

*opera-9.60_pre2424 (10 Sep 2008)

  10 Sep 2008; Jeroen Roovers <jer@gentoo.org> +opera-9.60_pre2424.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2008/09/10/opera-9-6-beta-released>.

*opera-9.60_pre2415 (06 Sep 2008)

  06 Sep 2008; Jeroen Roovers <jer@gentoo.org> +opera-9.60_pre2415.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2008/09/05/9-60-beta-1-rc>.

*opera-9.60_pre2410 (29 Aug 2008)

  29 Aug 2008; Jeroen Roovers <jer@gentoo.org> +opera-9.60_pre2410.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2008/08/29/opera-9-6-snapshot-bug-
  fixes>.

*opera-9.60_pre2405 (25 Aug 2008)

  25 Aug 2008; Jeroen Roovers <jer@gentoo.org> +opera-9.60_pre2405.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2008/08/22/first-9-60-snapshot>.

  25 Aug 2008; Jeroen Roovers <jer@gentoo.org> metadata.xml,
  -opera-9.51.ebuild:
  Remove old (bug #235298). Squash metadata.xml tabbing.

  25 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org> opera-9.52.ebuild:
  ppc stable, bug #235298

  22 Aug 2008; Markus Meier <maekke@gentoo.org> opera-9.52.ebuild:
  x86 stable, bug #235298

  22 Aug 2008; Dawid Węgliński <cla@gentoo.org> opera-9.52.ebuild:
  Stable on amd64 - security bug #235298

  20 Aug 2008; Jeroen Roovers <jer@gentoo.org> -opera-9.52_pre2065.ebuild,
  -opera-9.52_pre2068.ebuild, -opera-9.52_pre2069.ebuild,