@@ -46,6 +46,12 @@ DIST opera-9.60-2430.gcc4-shared-qt3.i386.tar.bz2 5861982 RMD160 9a65a06efb95a6a
 DIST opera-9.60-2430.gcc4-shared-qt3.ppc.tar.bz2 5938552 RMD160 56016c91af681252ad57e2153e899ec5175fa7f5 SHA1 89a1ab457e09203543a41c3a3761a91c35d26205 SHA256 3b2c4305634c33cf81a3d1d4a65f7778eb9763afd811b6f7c6e1a930fec052bc
 DIST opera-9.60-2430.gcc4-shared-qt3.x86_64.tar.bz2 6471904 RMD160 d5a07ee184fed2137453bd4584ee93499fe1dd86 SHA1 45a65d12e432fd851a14e9afe7a22f12c05db491 SHA256 4eb375f5438a6e325d7998dfcf1edf1fab9d318b1de8c1ff3a616289181b423e
 DIST opera-9.60-2430.gcc4-static-qt3.i386.tar.bz2 7766909 RMD160 5be5e60d0876d76d176177be1cccbee6abdb8cd9 SHA1 fbb51adf0fff4e5163cd0403d4b98294981f0040 SHA256 9eddd252b7c8e716a920faceab1cb2dc824b9423a24c5dde5462893da2579162
+DIST opera-9.60-2436.freebsd5-shared-qt3.i386.tar.bz2 6909025 RMD160 72a234da91bc7066b4b1ecd0a6f63a87d6394055 SHA1 003eb391568968c40b889e9009be7bdfe3e7dfba SHA256 125bfa5fa661828445b10dcfe19a5b4aa19818183ef41abfc04c51d422951e68
+DIST opera-9.60-2436.gcc4-qt4.i386.tar.bz2 6743516 RMD160 efb378886b5a9e0e8daabfd85f3365738a7695c3 SHA1 7b30ad6beb26bae6f9f71a8693465a3c0d254724 SHA256 d6505083f0b95fb9abb466c028628e6d9045223805256a018590dc614387ec71
+DIST opera-9.60-2436.gcc4-shared-qt3.i386.tar.bz2 6780570 RMD160 5246ef78a0f6e7b7255e9e97a4b1a49a165a13d8 SHA1 c1bd2ad25af87bdb0e85decc659be1e168e012f2 SHA256 16eba03d454408a7869d641b40c8b5a430d5cfc1bb0a35a7bf59ed02b30c06e7
+DIST opera-9.60-2436.gcc4-shared-qt3.ppc.tar.bz2 6835278 RMD160 5403fc29e53963ca59f2793a7c7bd5d4b7e952f2 SHA1 e5cf3c17bb271f448289bcea00b942e8f135dd56 SHA256 9e680812b7096357a2ec3aad99aad1611618bde0c23c10f002174a72444b0cae
+DIST opera-9.60-2436.gcc4-shared-qt3.x86_64.tar.bz2 7392203 RMD160 de0df9ea7b06466071e768f2297e7a49928942a6 SHA1 a4da3990b14be86714f5869c7ea3d82fd0e6dc09 SHA256 e333414df1eae08ac2eb0f06cd6394f97dd7a6701ef01bb19895bd3819a319b1
+DIST opera-9.60-2436.gcc4-static-qt3.i386.tar.bz2 8679805 RMD160 98b5e552a3745cd4ce9a833839e8d5f2b99867ad SHA1 277016274fcbc1a7ab563b599191f780deb32f13 SHA256 07e9ccd06c2e3590d1e81ffadfcf6eac41dbc5b88d3028ed45e77c25ea4f1557
 DIST opera-9.60-freebsd5-shared-qt3.i386.tar.bz2 6717427 RMD160 ed06d7ff3ef4f8cf335dff6aac81916436b6f101 SHA1 39a30762102bc3dac1db463c7ba511808f89c551 SHA256 238665c176ab82f3da5719c2b24412aad38154ceb4401da863aadb9d7319d9bf
 DIST opera-9.60-freebsd5-static-qt3.i386.tar.bz2 8642807 RMD160 fa4313c0a94e22856219cecfaa959f9b07e8140f SHA1 14b1dc8d90c18614f29e903f323b7f9285d7460d SHA256 fd3354b9c9d4d2fa9640ded124103fb8d6dc047e0a36f74631b43f7868b49374
 DIST opera-9.60.gcc4-qt4.i386.tar.bz2 8805058 RMD160 2078250af3230901e58b4752a80f037c6c5fa9af SHA1 df58d25b6fe60c00e05bd1846a1b9891954cfe90 SHA256 445f72e5fdaa0be1000bdf1533335f12d943756b40fc9b966d10372206c00996
@@ -61,5 +67,6 @@ EBUILD opera-9.60_pre2415.ebuild 7005 RMD160 57dd15676741a4ecee942f92482684eed65
 EBUILD opera-9.60_pre2424.ebuild 7243 RMD160 4296f757d57f955b8ef16521e3ec91e116db9206 SHA1 3ece7ed59301a70d2ee52e2a69f6a840379fae24 SHA256 cf3423d5ca6754255488e35e9a5265e0eb3d9d60edb22768396d72ca01aed323
 EBUILD opera-9.60_pre2426.ebuild 6872 RMD160 17ac883d8e1ed5aa24f6b0f7f61b4930cd05e875 SHA1 531f55174e5b605777c4704cf68b1eeacdb71274 SHA256 5414a8fedfe4ed7e3a2591c209dee6a7d0a740ce8e3364abad52627c2981986d
 EBUILD opera-9.60_pre2430.ebuild 6872 RMD160 d1dd6b7855217da963d2242c841f77791d59fc8b SHA1 ddf08e9a66bdcca3734070480e06f3ef8ad96087 SHA256 373b74394f9abc907877f867f98672aa1dcc005678a44ec8bc157a249f267fa0
-MISC ChangeLog 57467 RMD160 c1524547ba7c54dacd26eee5b3528bed489b541f SHA1 0942fb6e6f29a20c2106d6f8ce40b37bd283ed98 SHA256 351fea577709d9ce7b53821e923e2810dc1ec7760fea6568ca328658c701b68f
+EBUILD opera-9.60_pre2436.ebuild 6950 RMD160 caaafca9c8d74aefd8ec9f7a0fb9439bc6bec720 SHA1 a174fa040fbd70ac16d269b8d199800e0cab7961 SHA256 65de0384167c93ea924dda48eb97e71ea5b43026003e628171ee88ca74c7be3e
+MISC ChangeLog 57662 RMD160 363e472d681545903a89c8b5d8a33bb09ecf1cf1 SHA1 a7902c16bed2c27b193e7a7c48e2c15e53a9b3f3 SHA256 05356f3c06f4ec6061457047afad4108f5403f9dc9c970ad52ff5dd19476b7b0
 MISC metadata.xml 697 RMD160 704ad62aa31055fa9c677a77b86ae8aab2a919aa SHA1 809cd142def2fe81ecce28c5d9fb8d54abb52120 SHA256 e65a1cc3846a285fa12fa8a751722c21baa2df029fbdf15b4ec86581dd911657
